Simplified requirements.txt as well shift summary code

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,8 @@
-ace_tools
-altgraph
-annotated-types
-anyio
-beautifulsoup4
-black
-blinker
-certifi
-charset-normalizer
-click
-colorama
-contourpy
-cycler
-databricks-sql
-databricks-sql-connector
-exceptiongroup
-fastapi
-finvizfinance
-Flask
-fonttools
-frozendict
-greenlet
-h11
-idna
-itsdangerous
-Jinja2
-kiwisolver
-lxml
-lz4
-MarkupSafe
-matplotlib
-multitasking
-mypy-extensions
-numpy
-oauthlib
-packaging
 pandas
-pathspec
-peewee
-pefile
-pillow
-platformdirs
-py4j
-pyarrow
-pydantic
-pydantic_core
-pyinstaller
-pyinstaller-hooks-contrib
-pyparsing
-pyspark
-pystache
-python-dateutil
-python-dotenv
-pytz
-pywin32-ctypes
 requests
-schedule
-six
 slack_sdk
-sniffio
-soupsieve
-SQLAlchemy
-starlette
-thrift
-tomli
-typing_extensions
-tzdata
-urllib3
-uvicorn
-Werkzeug
-yfinance
+schedule
+databricks
+matplotlib
+pyspark
+databricks-sql-connector
